# a2a_fiuba

./: chunks_memory.json  pyproject.toml
agents/crewai/: __main__.py  task_manager.py
agents/fisica/: README.md  __main__.py  agent.py  agent_OLD.py  pyproject.toml  task_manager.py
